--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,13 @@ header{
     justify-content: space-between;
     align-items: center;
 }
+header img{
+    width: 80px;
+}
 header h1{
     background-color:rgb(176, 223, 241);
     font-family: 'Klee One', cursive;
+    font-size: 25px;
 
 }
 .subtitulo{
@@ -114,6 +118,7 @@ section div img{
 .preguntas{
     padding: 10px;
 }
+
 .contenedor-imagenes .imagenes div{
     transition: 1s;
 }
@@ -164,8 +169,8 @@ footer img:hover{
 
 }
 .carrousel img{
-    width: 40%;
-    height: 90vh;
+    width: 10%;
+    height: 70vh;
 }
 .galeria-container {
     margin-top: 30px;
@@ -189,17 +194,27 @@ footer img:hover{
     font-size: 20px;
     padding: 20px;
 }
+.tienda {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 
 
 /*--------Contactanos--------*/
 
 .formulario {
-    font-family:'Klee One', cursive;
-    padding: 20px;
-}
-div {
-    font-family:'Klee One', cursive;
 
+    font-family:'Klee One', cursive;
+    padding: 10px;
+}
+div{
+    font-family:'Klee One', cursive;
+}
+.form{
+    margin: 20px;
 }
 /*--------MEDIAS QUERYS--------*/
 @media screen and (max-width:1060px){
