--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,7 @@ footer{
     align-items: center;
     background-color:rgba(211, 211, 211, 0.678) ;
     padding: 30px;
+
 }
 
 footer img{
@@ -208,6 +209,7 @@ footer img:hover{
 .formulario {
 
     font-family:'Klee One', cursive;
+    font-size: 10px;
     padding: 10px;
 }
 div{
