--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,19 @@
   box-sizing: border-box; }
 
 /** variables **/
+/** extends **/
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center; }
+
+/** mixins **/
+.imagenes {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
+
 header {
   background-color: #b0dff1;
   padding: 20px;
@@ -128,8 +141,6 @@ img {
 .formulario {
   font-family: 'Klee One', cursive;
   padding: 10px; }
-  .formulario .formulario h1 {
-    font-size: 5px; }
   .formulario .form {
     margin: 20px; }
     .formulario .form div {
@@ -146,6 +157,42 @@ footer {
     width: 50px;
     height: 50px;
     transition: 1s; }
+
+@media screen and (max-width: 1060px) {
+  .galeria-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr;
+    gap: 10px; } }
+
+@media screen and (max-width: 980px) {
+  header {
+    flex-direction: column; } }
+
+@media screen and (max-width: 635px) {
+  header h1 {
+    font-size: 20px; } }
+
+@media screen and (max-width: 587px) {
+  header nav ul {
+    flex-direction: column;
+    text-align: center; } }
+
+@media screen and (max-width: 550px) {
+  .hero a {
+    visibility: hidden; } }
+
+@media screen and (max-width: 402px) {
+  .galeria-container img {
+    width: 300px;
+    height: 200px; } }
+
+@media screen and (max-width: 360px) {
+  .texto div h2 {
+    font-size: 18px; } }
+
+@media screen and (max-width: 360px) {
+  div h3 {
+    font-size: 18px; } }
 
 .hero {
   display: flex;
