--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -20,7 +20,7 @@ orange;
 @mixin flex ($flex, $justify, $wrap){
     display: $flex;
     justify-content: $justify;
-    flex-wrap: $wrap
+    flex-wrap: $wrap;
 }
 
 .imagenes{
