--- a/css/estilos.css
+++ b/css/estilos.css
@@ -103,6 +103,25 @@ header {
     font-style: italic; }
 
 /*   adopta   */
+
+  .adopta{
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .card{
+    margin-top: 10px;
+  }
+
+.adopcion{
+  text-align: center;
+  font-style: italic;
+  font-size: 20px;
+}
+
 /*   colabora   */
 .parrafo-tienda {
   font-family: 'Klee One', cursive;
@@ -163,6 +182,10 @@ footer {
     grid-template-columns: 1fr;
     grid-template-rows: 2fr;
     gap: 10px; } }
+
+@media screen and (max-width: 1050px) {
+  .tienda {
+    flex-direction: column; } }
 
 @media screen and (max-width: 980px) {
   header {
